Correcting Section File Names
The navigation bar was not working due to the file names being incorrect.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="logo">MyAnalytics</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="football.html">Football Betting</a></li>
-        <li><a href="viz.html">Data Visualisations</a></li>
-        <li><a href="metrics.html">Proprietary Metrics</a></li>
+        <li><a href="footballbetting.html">Football Betting</a></li>
+        <li><a href="datavis.html">Data Visualisations</a></li>
+        <li><a href="propmetrics.html">Proprietary Metrics</a></li>
       </ul>
     </nav>
   </header>
