--- a/footballbetting.html
+++ b/footballbetting.html
@@ -12,9 +12,9 @@
       <div class="logo">MyAnalytics</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="football.html">Football Betting</a></li>
-        <li><a href="viz.html">Data Visualisations</a></li>
-        <li><a href="metrics.html">Proprietary Metrics</a></li>
+        <li><a href="footballbetting.html">Football Betting</a></li>
+        <li><a href="datavis.html">Data Visualisations</a></li>
+        <li><a href="propmetrics.html">Proprietary Metrics</a></li>
       </ul>
     </nav>
   </header>
@@ -22,12 +22,12 @@
   <main>
     <section class="intro">
       <h1>Football Betting</h1>
-      <p>Content coming soon. This section will feature betting strategy, odds models, and analysis.</p>
+      <p>Content coming soon. This section will feature posts analysing interesting betting opportunities.</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Ryan Smith</p>
   </footer>
 </body>
 </html>
