Updating titles, logos, and logging entry into datavis
Updated all filler titles and labels, added new content.

--- a/datavis.html
+++ b/datavis.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Data Visualisations | MyAnalytics</title>
+  <title>Data Visualisations | RWFD</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">MyAnalytics</div>
+      <div class="logo">RWFD</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="footballbetting.html">Football Betting</a></li>
@@ -22,8 +22,88 @@
   <main>
     <section class="intro">
       <h1>Data Visualisations</h1>
-      <p>Content coming soon. Expect interactive charts, graphs, and visual summaries of data.</p>
+      <p>Here is a collection of insightful, strange, and sometimes pointless visualisations of data from the world of football. Make of it what you will.</p>
     </section>
+
+<section class="pubs">
+      <h1>Does having more pubs make you more succeptible to poor home results?</h1>
+      <p>Below is the number of pubs for each current Premier League team within a 1 mile radius of their stadium. Data sourced from Google Maps.</p>
+
+<div class="table-container">
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th>Club</th>
+        <th>Pubs Within 1 Mile</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Newcastle United</td><td>174</td></tr>
+      <tr><td>Wolverhampton Wanderers</td><td>50</td></tr>
+      <tr><td>Arsenal</td><td>33</td></tr>
+      <tr><td>Ipswich Town</td><td>29</td></tr>
+      <tr><td>Chelsea</td><td>27</td></tr>
+      <tr><td>Liverpool</td><td>25</td></tr>
+      <tr><td>Everton</td><td>23</td></tr>
+      <tr><td>Tottenham Hotspur</td><td>20</td></tr>
+      <tr><td>Nottingham Forest</td><td>14</td></tr>
+      <tr><td>West Ham United</td><td>12</td></tr>
+      <tr><td>Aston Villa</td><td>8</td></tr>
+      <tr><td>Bournemouth</td><td>7</td></tr>
+      <tr><td>Crystal Palace</td><td>7</td></tr>
+      <tr><td>Leicester City</td><td>7</td></tr>
+      <tr><td>Manchester United</td><td>7</td></tr>
+      <tr><td>Brentford</td><td>6</td></tr>
+      <tr><td>Fulham</td><td>6</td></tr>
+      <tr><td>Southampton</td><td>4</td></tr>
+      <tr><td>Brighton & Hove Albion</td><td>3</td></tr>
+      <tr><td>Manchester City</td><td>2</td></tr>
+    </tbody>
+  </table>
+</div>
+
+<p>Here we have each teams' home performance across the past 200 games in all competitions.</p>
+
+<p>Now it's fair to say this venture may be entirely pointless and rather stupid; of course you would expect stronger teams to have a better home record. Teams coming up and down also affects the consistency across the data, but may actually help in some way to reduce the inbalance for newly promoted sides, as they will boast more favourable home records from their time in the Championship.</p>
+
+<div class="table-container">
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th>Club</th>
+        <th>Wins</th>
+        <th>Draws</th>
+        <th>Losses</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Newcastle United</td><td>98</td><td>54</td><td>48</td></tr>
+      <tr><td>Wolverhampton Wanderers</td><td>85</td><td>60</td><td>55</td></tr>
+      <tr><td>Arsenal</td><td>112</td><td>50</td><td>38</td></tr>
+      <tr><td>Ipswich Town</td><td>90</td><td>65</td><td>45</td></tr>
+      <tr><td>Chelsea</td><td>110</td><td>55</td><td>35</td></tr>
+      <tr><td>Liverpool</td><td>130</td><td>45</td><td>25</td></tr>
+      <tr><td>Everton</td><td>95</td><td>60</td><td>45</td></tr>
+      <tr><td>Tottenham Hotspur</td><td>105</td><td>50</td><td>45</td></tr>
+      <tr><td>Nottingham Forest</td><td>88</td><td>70</td><td>42</td></tr>
+      <tr><td>West Ham United</td><td>92</td><td>60</td><td>48</td></tr>
+      <tr><td>Aston Villa</td><td>98</td><td>55</td><td>47</td></tr>
+      <tr><td>Bournemouth</td><td>85</td><td>60</td><td>55</td></tr>
+      <tr><td>Crystal Palace</td><td>90</td><td>65</td><td>45</td></tr>
+      <tr><td>Leicester City</td><td>100</td><td>55</td><td>45</td></tr>
+      <tr><td>Manchester United</td><td>120</td><td>50</td><td>30</td></tr>
+      <tr><td>Brentford</td><td>95</td><td>60</td><td>45</td></tr>
+      <tr><td>Fulham</td><td>88</td><td>65</td><td>47</td></tr>
+      <tr><td>Southampton</td><td>90</td><td>60</td><td>50</td></tr>
+      <tr><td>Brighton & Hove Albion</td><td>85</td><td>65</td><td>50</td></tr>
+      <tr><td>Manchester City</td><td>151</td><td>28</td><td>21</td></tr>
+    </tbody>
+  </table>
+</div>
+
+
+    </section>
+
   </main>
 
   <footer>
