--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Sports Analytics Portfolio</title>
+  <title>Ryan's World of Football Data</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">MyAnalytics</div>
+      <div class="logo">RWFD</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="footballbetting.html">Football Betting</a></li>
@@ -21,13 +21,25 @@
 
   <main>
     <section class="intro">
-      <h1>Welcome to My Sports Analytics Portfolio</h1>
-      <p>Select a section from the navigation bar to explore my work.</p>
+      <h1>Welcome to Ryan's World of Football Data</h1>
+      <p>I am a Mathematics graduate with a deep love for football and data. Here you will be able to find articles and analysis on football betting, unique (and sometimes quite silly) data visualisations, and my own propietary football statistics/metrics.</p>
     </section>
+
+  <section class="football-facts">
+    <h2>Football Facts and Stats That Interest Me</h2>
+    <ul>
+      <li>Lionel Messi has the highest goals+assists per 90 minutes ratio in top European leagues since 2010.</li>
+      <li>The average number of goals in a Premier League match is around 2.7, but spikes in December due to fixture congestion.</li>
+      <li>Brentford FC uses statistical modeling for recruitment — one of the first clubs to build a team this way.</li>
+      <li>My custom "Expected Points" metric often outperforms traditional xG in predicting match results.</li>
+    </ul>
+  </section>
+</main>
+
   </main>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Ryan Smith</p>
   </footer>
 </body>
 </html>
