--- a/propmetrics.html
+++ b/propmetrics.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proprietary Metrics | MyAnalytics</title>
+  <title>Proprietary Metrics | RWFD</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">MyAnalytics</div>
+      <div class="logo">RWFD</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="footballbetting.html">Football Betting</a></li>
