--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <section class="football-facts">
     <h2>Football Facts and Stats That Interest Me</h2>
     <ul>
-      <li>Lionel Messi has the highest goals+assists per 90 minutes ratio in top European leagues since 2010.</li>
-      <li>The average number of goals in a Premier League match is around 2.7, but spikes in December due to fixture congestion.</li>
-      <li>Brentford FC uses statistical modeling for recruitment — one of the first clubs to build a team this way.</li>
-      <li>My custom "Expected Points" metric often outperforms traditional xG in predicting match results.</li>
+      <li>As of January 2024, James Milner had played against 2,277 players in the Premier League, equavilent to 48% of all PL players.</li>
+      <li>Across the top leagues, around 20-25% of all goals happen in the final 15 minutes.</li>
+      <li>Since 1998, over 60% of World Cup matches have ended with either a draw or a 1-goal margin.</li>
+      <li>Statistically speaking, teams do see a performance bump for around 3-5 games after hiring a new manager, including temporary appointments. However, performance usually reverts to the mean within 10 games.</li>
     </ul>
   </section>
 </main>
