--- a/footballbetting.html
+++ b/footballbetting.html
@@ -24,6 +24,15 @@
       <h1>Football Betting</h1>
       <p>Content coming soon. This section will feature posts analysing interesting betting opportunities.</p>
     </section>
+
+<section class="articles">
+      <article class="article-preview">
+        <h2><a href="psg-arsenal_30_05_25.html">PSG vs Arsenal: Betting Opportunities</a></h2>
+        <p class="date">April 30, 2025</p>
+        <p>Previewing the huge UCL clash between PSG and Arsenal, and highlighting potential betting opportunities.</p>
+      </article>
+
+    </section>
   </main>
 
   <footer>
