--- a/propmetrics.html
+++ b/propmetrics.html
@@ -124,7 +124,7 @@
 \( \text{Randomness Index} = \sum_{i=1}^{5} w_i \cdot \text{Component}_i \)
 </p>Where \( w_i \) represents individual weightings for each component. </p>
 
-<p>I will leave the weightings down to discretion; to formally develop this as a uniform index, it would require collaboration and varying input to arrive at an agreeable consensus. This idea could also be used to form a DNI - Darwin Núñez Index - by normalising each metric against Darwin's stats, and therefore building an index to find player most comparable to the Uruguayan. 
+<p>I will leave the weightings down to discretion; to formally develop this as a uniform index, it would require collaboration and varying input to arrive at an agreeable consensus. This idea could also be used to form a DNI - Darwin Núñez Index - by normalising each metric against Darwin's stats, and therefore building an index to find a player most comparable to the Uruguayan. 
 
 </div>
 
